EXTRA_DIST = API \
             CVS \
             DEVELOPERS \
             README.document \
             WISHLIST \
             architecture.svg \
             architecture.txt \
             class-hierarchy.dia \
             coding-style.txt \
             coordinates.txt \
             fonts.txt \
             keyboard-shortcuts.txt \
             sp2ink_rfe.gnumeric \
             sp_bugs.gnumeric 
