EXTRA_DIST = API \
             README.document \
             WISHLIST \
             architecture.svg \
             architecture.txt \
             class-hierarchy.dia \
             coordinates.txt \
             fonts.txt \
             sp2ink_rfe.gnumeric \
             sp_bugs.gnumeric \
             keys.xml \
             keys-svg.xsl \
             keys-html.xsl \
             keys.html
