
extensiondir = $(libdir)/sodipodi/extensions

otherstuffdir = $(datadir)/sodipodi/extensions

extensions = \
	roundhole \
	ill2svg.pl \
	SpSVG.pm \
	svg_dropshadow

otherstuff = \
	roundhole.xpm

extension_SCRIPTS = \
	$(extensions)

otherstuff_DATA = \
	$(otherstuff)

EXTRA_DIST = $(extension_SCRIPTS) $(otherstuff_DATA)

