##SUBDIRS = \
##    clipart \
##    extensions \
##    icons \
##    keyboards \
##    palettes \
##    screens \
##    fonts \
##    patterns \
##    templates \
##    examples \
##    gradients \
##    markers \
##    tutorials

SUBDIRS = icons screens extensions

## COPY THE REST OF THE FOLDERS TO THE PROPER LOCATION

## dist-hook:
##	mkdir $(distdir)/samples
##	cp $(datadir)/samples/*svg $(distdir)/samples
##	cp $(datadir)/samples/*png $(distdir)/samples

