
clipartdir = $(datadir)/inkscape/clipart
clipartsignsdir = $(datadir)/inkscape/clipart/road_signs

clipart_DATA =  \
	README \
	README-ribbon.txt \
	inkscape.logo.svg \
	orav.svg \
	ribbon.svg \
	tux.png \
	tux.svg

clipartsigns_DATA = \
	road_signs/Give_Way.svg \
	road_signs/README \
	road_signs/ahead_only.svg \
	road_signs/airplane.svg \
	road_signs/bus_lane.svg \
	road_signs/bus_opposite.svg \
	road_signs/buses_and_bikes.svg \
	road_signs/buses_and_bikes.svg.1 \
	road_signs/crossroads.svg \
	road_signs/curve_ahead.svg \
	road_signs/cycle_lane.svg \
	road_signs/cycle_route.svg \
	road_signs/cycles.svg \
	road_signs/drawbridge.svg \
	road_signs/falling_rocks.svg \
	road_signs/grounded.svg \
	road_signs/humpback.svg \
	road_signs/junc_curve.svg \
	road_signs/keep_left.svg \
	road_signs/lorry_limit.svg \
	road_signs/man_w_umbrella.svg \
	road_signs/narrows.svg \
	road_signs/narrows_both.svg \
	road_signs/no_buses.svg \
	road_signs/no_cycles.svg \
	road_signs/oneway.svg \
	road_signs/queues.svg \
	road_signs/rail_fence.svg \
	road_signs/slippery.svg \
	road_signs/splash.svg \
	road_signs/staggered.svg \
	road_signs/train.svg \
	road_signs/turn_left.svg

EXTRA_DIST = $(clipart_DATA) $(clipartsigns_DATA)
