
iconsdir = $(datadir)/inkscape/icons

pixmaps = \
    add_xml_element_node.xpm \
    add_xml_text_node.xpm \
    arrows_hor.xpm \
    arrows_ver.xpm \
    cap_butt.xpm \
    cap_round.xpm \
    cap_square.xpm \
    delete_xml_attribute.xpm \
    delete_xml_node.xpm \
    dimension_hor.xpm \
    duplicate_xml_node.xpm \
    fill_fractal.xpm \
    fill_gradient.xpm \
    fill_none.xpm \
    fill_pattern.xpm \
    fill_radial.xpm \
    fill_solid.xpm \
    join_bevel.xpm \
    join_miter.xpm \
    join_round.xpm \
    properties_fill.xpm \
    properties_layout.xpm \
    properties_stroke.xpm \
    rotate_left.xpm \
    scale_hor.xpm \
    scale_ver.xpm \
    set.xpm \
    writing_mode_lr.xpm \
    writing_mode_tb.xpm \
    guide_dialog.png

icons_DATA = \
    $(pixmaps) \
    icons.svg

EXTRA_DIST = $(icons_DATA)

