
iconsdir = $(datadir)/inkscape/icons

pixmaps = \
    add_xml_element_node.xpm \
    add_xml_text_node.xpm \
    delete_xml_attribute.xpm \
    delete_xml_node.xpm \
    duplicate_xml_node.xpm \
    set.xpm \
    writing_mode_lr.xpm \
    writing_mode_tb.xpm

icons_DATA = \
    $(pixmaps) \
    icons.svg

EXTRA_DIST = $(icons_DATA)

